create course's module and change in course navigation

--- a/app/partials/home/homecourses.html
+++ b/app/partials/home/homecourses.html
@@ -7,17 +7,13 @@
     <div class="col-sm-4 col-md-3 section-menu-col animated fadeIn">
 
       <div class="section-menu navbar-vertical">
-
-        <div class="header" style="font-size: 1.1em; font-weight: bold; border-bottom: 1px solid rgba(113, 113, 113, 0.5)"><i class="fas fa-microchip" style="padding-right: 5px;"></i> TECNOLOGIA</div>
-        <div class="option" style="font-size: 1.2em !important;"><a href="/home">Engenharia de Software</a></div>
-        <div class="option" style="font-size: 1.2em !important;"><a href="/home">Blockchain</a></div>
-
+        <div ng-repeat="k in knowledge">
+          <div class="header" style="font-size: 1.1em; font-weight: bold; border-bottom: 1px solid rgba(113, 113, 113, 0.5)"><i class="fas fa-microchip" style="padding-right: 5px;"></i>{{k.title}}</div>
+          <div class="option" style="font-size: 1.2em !important;"><a href="/home">Engenharia de Software</a></div>
+          <div class="option" style="font-size: 1.2em !important;"><a href="/home">Blockchain</a></div>  
+        </div>
+        
         <div style="height: 25px;"></div>
-
-        <div class="header" style="font-size: 1.1em; font-weight: bold; border-bottom: 1px solid rgba(113, 113, 113, 0.5)"><i class="fas fa-volleyball-ball" style="padding-right: 5px;"></i> ESPORTES</div>
-        <div class="option" style="font-size: 1.2em !important;"><a href="/home">Judo</a></div>
-        <div class="option" style="font-size: 1.2em !important;"><a href="/home">Jiu Jitsu</a></div>
-
       </div>
 
     </div>
@@ -137,8 +133,6 @@
           font-weight: bold;
         }
 
-      }
-
       </style>
 
       <style>
@@ -228,11 +222,6 @@
         .instrutora .author .title {
           font-weight: 400;
           font-size: 0.8em;
-        }
-
-
-        .instrutora .text {
-
         }
 
         .instrutora .picture {
