--- a/app/partials/courses/suite/owner.html
+++ b/app/partials/courses/suite/owner.html
@@ -1,9 +1,8 @@
 <div ng-include="'partials/headerhome.html'"></div>
 
 <style>
-
   .course-box {
-    box-shadow: 0px 0px 17px 0px rgba(130,130,130,0.23);
+    box-shadow: 0px 0px 17px 0px rgba(130, 130, 130, 0.23);
     display: inline-block;
     border-radius: 5px;
     height: 250px;
@@ -16,7 +15,6 @@
     font-size: 1.3em;
     font-weight: bold;
   }
-
 </style>
 
 <div class="container-fluid ">
@@ -36,22 +34,26 @@
 
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3" style="margin-top: 15px;" ng-repeat="course in courses">
 
-      <a href="/cursos/id/{{course._id}}" style="color: unset;">
+
       <div class="course-box">
-
-        <div class="title" style="margin-bottom: 10px;">{{course.title}}</div>
-
-        <div class="progress" style="height: 5px; box-shadow: 0px 0px 5px 0px rgb(0, 123, 255, 0.3); -webkit-box-shadow: 0px 0px 5px 0px rgb(0, 123, 255, 0.3);">
-          <div class="progress-bar" role="progressbar" aria-valuenow="0.3333333333333333" aria-valuemin="0" aria-valuemax="100" ng-style="progressbar" style="width: 50%;">
+        <a href="/cursos/id/{{course._id}}" style="color: unset;">
+          <div class="title" style="margin-bottom: 10px;">{{course.title}}</div>
+        </a>
+        <div class="progress"
+          style="height: 5px; box-shadow: 0px 0px 5px 0px rgb(0, 123, 255, 0.3); -webkit-box-shadow: 0px 0px 5px 0px rgb(0, 123, 255, 0.3);">
+          <div class="progress-bar" role="progressbar" aria-valuenow="0.3333333333333333" aria-valuemin="0"
+            aria-valuemax="100" ng-style="progressbar" style="width: 50%;">
           </div>
         </div>
         <!-- -->
 
         <p>10% Completo</p>
 
+        <button class="btn btn-primary" ng-click="moduleCreate(course._id)">Criar Modulo</button>
+
       </div>
       <!-- -->
-      </a>
+
 
     </div>
     <!-- -->
