added create playlist

--- a/app/partials/dashboard/academia/managebyid.html
+++ b/app/partials/dashboard/academia/managebyid.html
@@ -73,6 +73,16 @@
         </div>
         <!-- end col-xs-12 col-sm-6 -->
 
+        <div class="col-xs-12 col-sm-6">
+
+          <div class="dashboard-status-box">
+            <span><i class="fas fa-list"></i><h4>Create Playlist</h4><a href="/p/create?universityId={{university._id}}">CREATE</a></span>
+            <div class="stats"></div>
+          </div>
+
+        </div>
+        <!-- end col-xs-12 col-sm-6 -->
+
       </div>
       <!-- end row -->
 
